2010-03-01  Dominic Hopf  <dmaphy@googlemail.com>

 * src/gdb-io-run.c, src/gdb-io-read.c: Improve the way a running process gets
   killed (thanks Thomas Martitz)


2010-01-16  Dominic Hopf  <dmaphy@googlemail.com>

 * src/gdb-ui-main.c, src/gdb-ui.h, src/geanygdb.c:
   Add a menu entry for GeanyGDB, add possibility to set keyboard shortcuts, add
   page in the bottom toolbar which in the future may be used to display the
   stack and local variables or watches. This changes were all made by Radu
   Stefan, thanks very much.


2010-01-04  Dominic Hopf  <dmaphy@googlemail.com>

 * src/geanygdb.c, src/gdb-ui-frame.c, src/gdb-ui-locn.c, src/gdb-io-run.c,
   src/gdb-io-stack.c, src/gdb-io-read.c, src/gdb-ui.h, src/gdb-io-envir.c,
   src/gdb-io-break.c, src/gdb-ui-envir.c, src/gdb-ui-main.c,
   src/gdb-ui-break.c, src/gdb-io-frame.c: Update sources to use more current
   plugin API functions and fix a widget-not-found-warning.


2010-01-02  Dominic Hopf  <dmaphy@googlemail.com>
 * Any file: Update copyright information.


2009-12-13  Dominic Hopf  <dmaphy@googlemail.com>
 * geanydebug.c, geanygdb.c, Makefile.am: Finally fix any remaining naming
   issues, GeanyGDB will show up as "GeanyGDB" now in the plugin manager.
 * INSTALL, README: Remove installation instructions and add hint for
   Geany-Plugins instead, update wording and notation for GeanyGDB.


2009-10-27  Dominic Hopf  <dmaphy@googlemail.com>
 * TODO: Add a TODO file, to note some things to get done for next releases.


2009-10-18  Dominic Hopf <dmaphy@googlemail.com>
 * AUTHORS: Add Dominic Hopf to the AUTHORS.


2009-09-02  Dominic Hopf  <dmaphy@googlemail.com>
 * src/gdb-ui-main.c: Fix an issue with button labels, where some localizations
   may caused a stack overflow, remember the last targetpath.


2009-05-07  Dominic Hopf  <dmaphy@googlemail.com>
 * Makefile.am: Install ttyhelper and geanydebug.so to /usr/lib/geany/,
   patch by Chow Loong Jin, thanks!

